--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,8 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black" style="font-family: Orbitron, sans-serif;">
-                    Unsure what to put here lol
+                <h1 class="display-4 logo-font text-black">
+                    
                 </h1>
                 <div class="my-5">
                     <h4>
