--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -18,12 +19,41 @@
 
     {% block corejs %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/060b88222d.js" crossorigin="anonymous"></script>
     {% endblock %}
 
     <title>Astro Apparel {% block extra_title %}{% endblock %} </title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+              <a href="{% url 'home'%}" class="nav-link main-logo-link">
+                <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
+              </a>
+          </div>
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <form method="GET" action="">
+              <div class="input-group w-100">
+                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                <div class="input-group-append">
+                  <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                    <span class="icon">
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>    
+            </form>  
+          </div>
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+              <li class="list-inline-item dropdown"></li>
+              <li class="list-inline-item"></li>
+            </ul>
+        </div>
+    </header>
 
     {% if messages %}
     <div class="message-container"></div>
