Added static and media files, Added base css file

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,10 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <div class="row">
-          <div class="col"></div>
+      <div class="d-flex">
+        <img src="/media/astro_apparel_logo.png" alt="Astro Apparel Logo">
+      </div>
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
               <a href="{% url 'home'%}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
@@ -47,43 +49,41 @@
               </div>    
             </form>  
           </div>
-          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-              <li class="list-inline-item dropdown">
-                <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="text-center">
-                    <div><i class="fa-solid fa-user fa-lg"></i></div>
-                    <p class="my-0">My Account</p>
-                  </div>
-                </a>
-                <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                  {% if request.user.is_authenticated %} <!--If user is authenticated it will provide a link to their profile and a link to logout-->
-                      {% if requeset.user.is_superuser %} <!--If user is authenticated and is a superuser it will provide them with a link to the Product Managment where they can make changes to the products-->
-                        <a href="" class="dropdown-item">Product Management</a>
-                      {% endif %}
-                      <a href="" class="dropdown-item">My Profile</a>
-                      <a href="{% url 'account-logout' %}" class="dropdown-item">Logout</a>
-                  {% else %}
-                      <a href="{% url 'account_signup' %}" class="dropdown-item">Sign Up</a> <!--Allow users to register an account-->
-                      <a href="{% url 'account_login' %}" class="dropdown-item">Login</a> <!--Allow users to login to their accounts-->
-                  {% endif %}
-                </div>
-              </li>
-              <li class="list-inline-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{%else%}text-black{%endif%} nav-link" href=""> <!--If there is items in the cart the font will be bold-->
-                  <div class="text-center">
-                    <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
-                    <p class="my-0">
-                      {% if grand_total %}
-                        £{{ grand_total|floatformat:2}} <!--checks if the grand_total variable exists and displays the total formatted to 2 decimal places-->
-                      {% else %}
-                        £0.00
-                      {% endif %}
-                    </p> 
-                  </div>
-                </a>       
-              </li>
+                <li class="list-inline-item dropdown">
+                    <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="text-center">
+                            <div><i class="fa-solid fa-user fa-lg"></i></div>
+                            <p class="my-0">My Account</p>
+                        </div>
+                    </a>
+                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        {% if request.user.is_authenticated %}
+                            <a href="" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        {% endif %}
+                    </div>
+                </li>
+                <li class="list-inline-item">
+                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                        <div class="text-center">
+                            <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
+                            <p class="my-0">
+                                {% if grand_total %}
+                                    £{{ grand_total|floatformat:2 }}
+                                {% else %}
+                                    £0.00
+                                {% endif %}
+                            </p>
+                        </div>
+                    </a>
+                </li>
             </ul>
+        </div>  
         </div>
     </header>
 
