--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
 
@@ -9,12 +8,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
-
+    
     {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet"  href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block corejs %}
@@ -26,9 +26,7 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <div class="d-flex">
-        <img src="/media/astro_apparel_logo.png" alt="Astro Apparel Logo">
-      </div>
+        <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo" class="logo"/>
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
               <a href="{% url 'home'%}" class="nav-link main-logo-link">
