Made changes to base html and css

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
               </a>
           </div>
-          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+          <div>
             <form method="GET" action="">
               <div class="input-group w-100">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
@@ -47,7 +47,7 @@
               </div>    
             </form>  
           </div>
-          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+          <div>
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                 <li class="list-inline-item dropdown">
                     <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
