--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo" class="logo"/>
+        <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+          <div>
               <a href="{% url 'home'%}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
               </a>
