--- a/templates/base.html
+++ b/templates/base.html
@@ -27,13 +27,13 @@
   <body>
     <header class="container-fluid fixed-top">
         <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-          <div>
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex position-realtive">
+          <div class="position-absolute top-0 start-50 translate-middle">
               <a href="{% url 'home'%}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
               </a>
           </div>
-          <div>
+          <div class="position-absolute top-0 start-100 translate-middle">
             <form method="GET" action="">
               <div class="input-group w-100">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
@@ -47,7 +47,7 @@
               </div>    
             </form>  
           </div>
-          <div>
+          <div class="position-absolute top-0 start-100 translate-middle">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                 <li class="list-inline-item dropdown">
                     <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
