--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
   <body>
     <header class="container-fluid fixed-top">
         <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex position-realtive">
-          <div class="position-absolute top-0 start-50 translate-middle">
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex position-realtive justify-content-center">
+          <div class="position-absolute top-0 start-50 translate-middle"> 
               <a href="{% url 'home'%}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
               </a>
