--- a/templates/base.html
+++ b/templates/base.html
@@ -21,18 +21,15 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/060b88222d.js" crossorigin="anonymous"></script>
     {% endblock %}
-
-    <title>Astro Apparel {% block extra_title %}{% endblock %} </title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex position-realtive justify-content-center">
-          <div class="position-absolute top-0 start-50 translate-middle"> 
-              <a href="{% url 'home'%}" class="nav-link main-logo-link">
+        <div class="d-flex justify-content-center">
+            <a href="{% url 'home'%}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
-              </a>
-          </div>
+            </a>
+        </div>
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
           <div class="position-absolute top-0 start-100 translate-middle">
             <form method="GET" action="">
               <div class="input-group w-100">
@@ -97,6 +94,5 @@
 
     {% block postloadjs %}
     {% endblock %}
-
   </body>
 </html>
