--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,11 @@
     <header class="container-fluid fixed-top">
         <div class="d-flex justify-content-center">
             <a href="{% url 'home'%}" class="nav-link main-logo-link">
-                <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
+              <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
+              <h1 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h1>
             </a>
-        </div>
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-          <div class="position-absolute top-0 start-100 translate-middle">
-            <form method="GET" action="">
-              <div class="input-group w-100">
+            <form method="GET" action="" class="d-none d-lg-block">
+              <div class="input-group">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
                   <button class="form-control btn btn-black border border-black rounded-0" type="submit">
@@ -42,10 +40,9 @@
                   </button>
                 </div>
               </div>    
-            </form>  
-          </div>
-          <div class="position-absolute top-0 start-100 translate-middle">
-            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            </form>
+            <div class="d-none d-lg-block">
+              <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                 <li class="list-inline-item dropdown">
                     <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <div class="text-center">
@@ -77,8 +74,8 @@
                         </div>
                     </a>
                 </li>
-            </ul>
-        </div>  
+              </ul>
+            </div>
         </div>
     </header>
 
@@ -93,6 +90,6 @@
     {% endblock %}
 
     {% block postloadjs %}
-    {% endblock %}
+    {% endblock %}  
   </body>
 </html>
