Made some changes to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,11 @@
               <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
               <h1 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h1>
             </a>
-            <form method="GET" action="" class="d-none d-lg-block">
-              <div class="input-group">
+        </div>
+        <div id="topnav">
+          <div>
+            <form method="GET" action="">
+              <div class="input-group w-100">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
                   <button class="form-control btn btn-black border border-black rounded-0" type="submit">
@@ -40,9 +43,10 @@
                   </button>
                 </div>
               </div>    
-            </form>
-            <div class="d-none d-lg-block">
-              <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            </form>  
+          </div>
+          <div>
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                 <li class="list-inline-item dropdown">
                     <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <div class="text-center">
@@ -74,8 +78,8 @@
                         </div>
                     </a>
                 </li>
-              </ul>
-            </div>
+            </ul>
+        </div>  
         </div>
     </header>
 
@@ -90,6 +94,6 @@
     {% endblock %}
 
     {% block postloadjs %}
-    {% endblock %}  
+    {% endblock %}
   </body>
 </html>
