--- a/templates/base.html
+++ b/templates/base.html
@@ -24,16 +24,16 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
+      <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
         <div class="d-flex justify-content-center">
             <a href="{% url 'home'%}" class="nav-link main-logo-link">
-              <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
               <h1 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h1>
             </a>
         </div>
         <div id="topnav">
           <div>
             <form method="GET" action="">
-              <div class="input-group w-100">
+              <div class="input-group">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
                   <button class="form-control btn btn-black border border-black rounded-0" type="submit">
