--- a/templates/base.html
+++ b/templates/base.html
@@ -24,76 +24,73 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
-        <div class="d-flex justify-content-center">
-            <a href="{% url 'home'%}" class="nav-link main-logo-link">
-              <h1 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h1>
-            </a>
-        </div>
-        <div id="topnav">
-          <div>
-            <form method="GET" action="">
-              <div class="input-group">
-                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                <div class="input-group-append">
-                  <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                    <span class="icon">
-                      <i class="fa-solid fa-magnifying-glass"></i>
-                    </span>
-                  </button>
-                </div>
-              </div>    
-            </form>  
+      <div class="d-flex justify-content-between align-items-center">
+          <a href="{% url 'home'%}" class="nav-link main-logo-link">
+              <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
+              <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
+          </a>
+          <div class="d-flex align-items-center">
+              <form method="GET" action="" class="d-none d-lg-block me-4">
+                <div class="input-group">
+                  <input class="form-control border border-black rounded-0 search-input" type="text" name="q" placeholder="Search our site">
+                  <div class="input-group-append">
+                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                      <span class="icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                      </span>
+                    </button>
+                  </div>
+                </div>    
+              </form>
+              <ul class="list-inline list-unstyled text-center my-0">
+                  <li class="list-inline-item dropdown">
+                      <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          <div class="text-center">
+                              <div><i class="fa-solid fa-user fa-lg"></i></div>
+                              <p class="my-0">My Account</p>
+                          </div>
+                      </a>
+                      <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                          {% if request.user.is_authenticated %}
+                              <a href="" class="dropdown-item">My Profile</a>
+                              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                          {% else %}
+                              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                          {% endif %}
+                      </div>
+                  </li>
+                  <li class="list-inline-item">
+                      <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                          <div class="text-center">
+                              <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
+                              <p class="my-0">
+                                  {% if grand_total %}
+                                      £{{ grand_total|floatformat:2 }}
+                                  {% else %}
+                                      £0.00
+                                  {% endif %}
+                              </p>
+                          </div>
+                      </a>
+                  </li>
+              </ul>
           </div>
-          <div>
-            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                <li class="list-inline-item dropdown">
-                    <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <div class="text-center">
-                            <div><i class="fa-solid fa-user fa-lg"></i></div>
-                            <p class="my-0">My Account</p>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                        {% if request.user.is_authenticated %}
-                            <a href="" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                        {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                        {% endif %}
-                    </div>
-                </li>
-                <li class="list-inline-item">
-                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                        <div class="text-center">
-                            <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
-                            <p class="my-0">
-                                {% if grand_total %}
-                                    £{{ grand_total|floatformat:2 }}
-                                {% else %}
-                                    £0.00
-                                {% endif %}
-                            </p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </div>  
-        </div>
-    </header>
+      </div>
+  </header>
 
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %}
+  {% if messages %}
+  <div class="message-container"></div>
+  {% endif %}
 
-    {% block page_header %}
-    {% endblock %}
+  {% block page_header %}
+  {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+  {% endblock %}
 
-    {% block postloadjs %}
-    {% endblock %}
+  {% block postloadjs %}
+  {% endblock %}
+
   </body>
 </html>
