--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
               </form>
               <div class="d-flex align-items-center">
                 <ul class="list-inline list-unstyled text-center my-0">
-                    <li class="list-inline-item dropdown">
+                    <li class="list-inline-item dropdown pt-3">
                         <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fa-solid fa-user fa-lg"></i></div>
