Made some changes to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,8 @@
               <div class="d-flex align-items-center">
                 <ul class="list-inline list-unstyled text-center my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link dropdown-toggle useraccounts" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <div class="text-center">
+                        <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="text-center useraccounts">
                                 <div><i class="fa-solid fa-user fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
                             </div>
