--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,9 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <div class="d-flex justify-content-between align-items-center">
-          <div>
+      <div class="d-flex flex-column flex-lg-row justify-content-between align-items-center">
+          <div class="d-flex align-items-center mb-3 mb-lg-0">
               <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
-          </div>
-          <div class="d-flex align-items-center">
               <a href="{% url 'home'%}" class="nav-link main-logo-link text-center">
                   <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
               </a>
@@ -46,67 +44,67 @@
                   </div>
                 </div>    
               </form>
-              <div class="d-flex align-items-center">
-                <ul class="list-inline list-unstyled text-center my-0">
-                    <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <div class="text-center useraccounts">
-                                <div><i class="fa-solid fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                                <a href="" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
-                        </div>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                            <div class="text-center">
-                                <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %}
-                                        £{{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                        £0.00
-                                    {% endif %}
-                                </p>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-              </div>  
+              <div class="d-flex align-items-center pt-3">
+                  <ul class="list-inline list-unstyled text-center my-0">
+                      <li class="list-inline-item dropdown">
+                          <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <div class="text-center">
+                                  <div><i class="fa-solid fa-user fa-lg"></i></div>
+                                  <p class="my-0">My Account</p>
+                              </div>
+                          </a>
+                          <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                              {% if request.user.is_authenticated %}
+                                  <a href="" class="dropdown-item">My Profile</a>
+                                  <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                              {% else %}
+                                  <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                  <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                              {% endif %}
+                          </div>
+                      </li>
+                      <li class="list-inline-item">
+                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                              <div class="text-center">
+                                  <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
+                                  <p class="my-0">
+                                      {% if grand_total %}
+                                          £{{ grand_total|floatformat:2 }}
+                                      {% else %}
+                                          £0.00
+                                      {% endif %}
+                                  </p>
+                              </div>
+                          </a>
+                      </li>
+                  </ul>
+              </div>
           </div>
       </div>
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">All Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">T-Shirts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sweatshirts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Hoodies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Accessories</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+      <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom border-black">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav mx-auto">
+                  <li class="nav-item">
+                      <a class="nav-link text-black" href="#">All Products</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-black" href="#">T-Shirts</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-black" href="#">Sweatshirts</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-black" href="#">Hoodies</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-black" href="#">Accessories</a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
   </header>
 
   {% if messages %}
