Added navigation bar to the base html file

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <header class="container-fluid fixed-top">
       <div class="d-flex flex-column flex-lg-row justify-content-between align-items-center">
           <div class="d-flex align-items-center mb-3 mb-lg-0">
-              <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo">
+              <img src="{% static '/assets/astroapparel_logo.png' %}" alt="Astro Apparel Logo" class="img-fluid w-25 w-lg-auto">
               <a href="{% url 'home'%}" class="nav-link main-logo-link text-center">
                   <h2 class="logo-font text-black my-0" style="font-family: Orbitron, sans-serif;">Astro Apparel</h2>
               </a>
@@ -81,7 +81,7 @@
               </div>
           </div>
       </div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom border-black">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
