--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
                   </div>
                 </div>    
               </form>
-              <div class="d-flex align-items-center pt-3">
+              <div class="d-inline-flex align-items-center pt-3">
                   <ul class="list-inline list-unstyled text-center my-0">
-                      <li class="list-inline-item dropdown">
+                      <li class="dropdown">
                           <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               <div class="text-center">
                                   <div><i class="fa-solid fa-user fa-lg"></i></div>
@@ -63,11 +63,11 @@
                               {% endif %}
                           </div>
                       </li>
-                      <li class="list-inline-item">
+                      <li>
                           <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                              <div class="text-center">
+                              <div class=" d-inline-flex align-items-center">
                                   <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
-                                  <p class="my-0">
+                                  <p class="my-0 ms-2">
                                       {% if grand_total %}
                                           £{{ grand_total|floatformat:2 }}
                                       {% else %}
