fixed the issue with cart link and user account link not aligning properly

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
               </form>
               <div class="d-inline-flex align-items-center pt-3">
                   <ul class="list-inline list-unstyled text-center my-0">
-                      <li class="dropdown">
+                      <li class="list-inline-flex dropdown">
                           <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               <div class="text-center">
                                   <div><i class="fa-solid fa-user fa-lg"></i></div>
@@ -63,7 +63,7 @@
                               {% endif %}
                           </div>
                       </li>
-                      <li>
+                      <li class="list-inline-flex">
                           <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                               <div class=" d-inline-flex align-items-center">
                                   <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
