fixed the issue with cart link and user account link not aligning properly

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                       </li>
                       <li class="list-inline-item">
                           <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                              <div class="d-inline-flex text-center">
+                              <div class="d-inline-item text-center">
                                   <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
                                   <p class="my-0 ms-2">
                                       {% if grand_total %}
