--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
                 </div>    
               </form>
               <div class="d-inline-flex align-items-center pt-3">
-                  <ul class="list-inline list-unstyled text-center my-0">
-                      <li class="list-inline-item dropdown user-links">
+                  <ul class="list-inline list-unstyled text-center my-0 user-links">
+                      <li class="list-inline-item dropdown">
                           <a class="text-black nav-link dropdown-toggle" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               <div class="text-center">
                                   <div><i class="fa-solid fa-user fa-lg"></i></div>
@@ -63,7 +63,7 @@
                               {% endif %}
                           </div>
                       </li>
-                      <li class="list-inline-item user-links">
+                      <li class="list-inline-item">
                           <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                               <div class="text-center">
                                   <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
