--- a/templates/base.html
+++ b/templates/base.html
@@ -144,6 +144,11 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <div class="container">
+    {% block content %}
+    {% endblock %}
+</div>
   
   <footer class="bg-dark text-white py-5">
     <div class="container">
