added footer, add template carousel, added privicy policy html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,16 @@ html {
 }
 
 
+/*------------------------------------- Footer */
+
+footer {
+    text-align: center;
+    padding: 1rem 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
 /*------------------------------------- Media Queries */
 
 @media (min-width: 1200px) {
