added privicy policy html

--- a/templates/privacypolicy.html
+++ b/templates/privacypolicy.html
@@ -106,39 +106,50 @@
           </div>
       </nav>
     </header>
-  <footer class="bg-dark text-white py-5">
+
     <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <h5>About Us</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">About Us</a></li>
-          </ul>
+    <h1 class="text-center">Privacy Policy</h1>
+    <h2>Introduction</h2>
+    <p>
+        Welcome to Astro Apparel. We are commited to protecting your privacy and ensuring that your personal
+        information is handles in a safe and responsible manner. This Privacy Policy outlines how we collect,
+        use, and protect your information when you visit our <a href="https://www.astroapparel.com">website</a>
+    </p>
+
+
+    <footer class="bg-dark text-white py-5">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+            <h5>About Us</h5>
+            <ul class="list-unstyled">
+                <li><a href="#" class="text-white">About Us</a></li>
+            </ul>
+            </div>
+            <div class="col-md-3">
+            <h5>Contact Us</h5>
+            <ul class="list-unstyled">
+                <li><a href="#" class="text-white">Contact Us</a></li>
+            </ul>
+            </div>
+            <div class="col-md-3">
+            <h5>Legal</h5>
+            <ul class="list-unstyled">
+                <li><a href="#" class="text-white">Privacy Policy</a></li>
+                <li><a href="#" class="text-white">Terms and Conditions</a></li>
+                <li><a href="#" class="text-white">Cookie Policy</a></li>
+                <li><a href="#" class="text-white">Shipping Policy</a></li>
+            </ul>
+            </div>
         </div>
-        <div class="col-md-3">
-          <h5>Contact Us</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Contact Us</a></li>
-          </ul>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col-md-6">
+            <p>&copy; 2023 Astro Apparel. All rights reserved.</p>
+            </div>
         </div>
-        <div class="col-md-3">
-          <h5>Legal</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Privacy Policy</a></li>
-            <li><a href="#" class="text-white">Terms and Conditions</a></li>
-            <li><a href="#" class="text-white">Cookie Policy</a></li>
-            <li><a href="#" class="text-white">Shipping Policy</a></li>
-          </ul>
         </div>
-      </div>
-      <hr class="my-4">
-      <div class="row">
-        <div class="col-md-6">
-          <p>&copy; 2023 Astro Apparel. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
   {% if messages %}
   <div class="message-container"></div>
