added privicy policy html

--- a/templates/privacypolicy.html
+++ b/templates/privacypolicy.html
@@ -135,7 +135,7 @@
             <div class="col-md-3">
             <h5>Legal</h5>
             <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Privacy Policy</a></li>
+                <li><a href="/templates/privacypolicy.html" class="text-white">Privacy Policy</a></li>
                 <li><a href="#" class="text-white">Terms and Conditions</a></li>
                 <li><a href="#" class="text-white">Cookie Policy</a></li>
                 <li><a href="#" class="text-white">Shipping Policy</a></li>
